# Kaleidoscope

./: CMakeLists.txt  README.md  code  fib  mandelbrot
cmake/modules/: AddKaleidoscope.cmake
tools/: CMakeLists.txt  toy.cpp
